<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearlayout_chamcong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/textDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spnDevice"
                android:layout_width="wrap_content"
                android:layout_height="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/textBaudrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baudrate"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spnBaudrate"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:entries="@array/baud_rate" />

        </LinearLayout>


        <ScrollView
            android:id="@+id/innerScrollView"
            android:layout_width="wrap_content"
            android:layout_height="320dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnOpenDevice"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/open"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/textTemplateNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="ID :"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/editUserID"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="#63a7ff"
                            android:editable="true"
                            android:inputType="number"
                            android:text="1" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnEnroll"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/enroll"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnIdentify"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/identify"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnGetEmptyID"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/get_empty_id"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnRemoveTemplate"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/remove_tmpl"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnReadTemplate"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/read_temp"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1">

                        <Button
                            android:id="@+id/btnCaptureImage"
                            android:layout_width="160dp"
                            android:layout_height="40dp"
                            android:text="@string/capture_ima"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnSetDevPass"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/set_pass"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnVerifyImage"
                        android:layout_width="170dp"
                        android:layout_height="40dp"
                        android:text="@string/verfy_ima"
                        android:textSize="15sp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnGetFeature"
                        android:layout_width="170dp"
                        android:layout_height="40dp"
                        android:text="@string/get_fea"
                        android:textSize="15sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnCloseDevice"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/close"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/cancle"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnVerify"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/verify"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnIdentifyFree"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/identifyfred"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnGetEnrollCount"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/get_enroll_count"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnRemoveAll"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/remove_all"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnWriteTemplate"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/write_temp"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnGetFWVer"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/get_fw_ver"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnVerifyPass"
                        android:layout_width="160dp"
                        android:layout_height="40dp"
                        android:text="@string/verfiy_pas"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnIdentifyImage"
                        android:layout_width="170dp"
                        android:layout_height="40dp"
                        android:text="@string/iden_ima"
                        android:textSize="15sp"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <EditText
            android:id="@+id/editDevPassword"
            android:layout_width="300dp"
            android:layout_height="38dp"
            android:autoText="false"
            android:ems="10"
            android:inputType="textPassword">

        </EditText>

        <!--<TextView-->
            <!--android:id="@+id/txtStatus"-->
            <!--android:layout_width="300dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_weight="0.45"-->
            <!--android:text="@string/open_device"-->
            <!--android:textSize="15sp" />-->

    </LinearLayout>


</LinearLayout>
